2020-1027 flex 算式測試、debug

--- a/sass/sass/_grid.scss
+++ b/sass/sass/_grid.scss
@@ -196,7 +196,9 @@
 .flex-8-4,
 .flex-4-8,
 .flex-4-4-4,
-.flex-3-3-3-3{
+.flex-3-3-3-3,
+.flex-equal-12-11, .flex-equal-12-10, .flex-equal-12-9, .flex-equal-12-8, .flex-equal-12-7,
+.flex-equal-12-6, .flex-equal-12-5, .flex-equal-12-4, .flex-equal-12-3, .flex-equal-12-2{
     margin: 1em 0;
 
     h2{ text-align: center; }
@@ -651,6 +653,11 @@
             .col{ @include flex-col-equal(4, 10px, 20px); }
         }
     }
+    @include screen('xs_mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 10px, 20px); }
+        }
+    }
 }
 .flex-equal-9-4-2{
     @include screen('tablet') {
@@ -733,13 +740,14 @@
     }
 }
 
-.flex-equal-12{
+
+.flex-equal-12,
+.flex-equal-12-11, .flex-equal-12-10, .flex-equal-12-9, .flex-equal-12-8, .flex-equal-12-7,
+.flex-equal-12-6, .flex-equal-12-5, .flex-equal-12-4, .flex-equal-12-3, .flex-equal-12-2{
     .Flex-set{
-        // 方向、是否斷點
-        flex-flow: row wrap;
+        @include gutter(16px);
         .col{
             @include flex-col-equal(12, 3px, 20px);
-
             // 自定義 ----------------- start
             background: #00bcd4;
             color: #fff;
@@ -747,21 +755,144 @@
             // ---------------------- end
         }
     }
+}
+[class^="flex-equal-12"]{
+    &:nth-child(odd){
+        .Flex-set .col{ background: #485b8a; }
+    }
+}
+
+.flex-equal-12{
     @include screen('tablet') {
         .Flex-set{
-            @include gutter(20px);
-            .col{
-                margin-top: .25em;
-                margin-bottom: .25em;
-                @include flex-col-equal(3, 10px, 20px);
-            }
+            .col{ @include flex-col-equal(3, 10px, 20px); }
         }
     }
     @include screen('mobile') {
         .Flex-set{
-            .col{
-                @include flex-col-equal(1, 0px, 20px);
-            }
+            .col{ @include flex-col-equal(1, 0px, 20px); }
+        }
+    }
+}
+.flex-equal-12-11{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(11, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+            // color: #222;
+        }
+    }
+}
+.flex-equal-12-10{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(10, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-12-9{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(9, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-12-8{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(8, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-12-7{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(7, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+            color: #222;
+        }
+    }
+}
+.flex-equal-12-6{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(6, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-12-5{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(5, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-12-4{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(4, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-12-3{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(3, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-12-2{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
         }
     }
 }
