2020-1028 flex 算式測試、debug

--- a/sass/sass/_grid.scss
+++ b/sass/sass/_grid.scss
@@ -197,8 +197,9 @@
 .flex-4-8,
 .flex-4-4-4,
 .flex-3-3-3-3,
-.flex-equal-12-11, .flex-equal-12-10, .flex-equal-12-9, .flex-equal-12-8, .flex-equal-12-7,
-.flex-equal-12-6, .flex-equal-12-5, .flex-equal-12-4, .flex-equal-12-3, .flex-equal-12-2{
+.flex-equal-TT,
+.flex-equal-TT-11, .flex-equal-TT-10, .flex-equal-TT-9, .flex-equal-TT-8, .flex-equal-TT-7,
+.flex-equal-TT-6, .flex-equal-TT-5, .flex-equal-TT-4, .flex-equal-TT-3, .flex-equal-TT-2{
     margin: 1em 0;
 
     h2{ text-align: center; }
@@ -756,11 +757,6 @@
         }
     }
 }
-[class^="flex-equal-12"]{
-    &:nth-child(odd){
-        .Flex-set .col{ background: #485b8a; }
-    }
-}
 
 .flex-equal-12{
     @include screen('tablet') {
@@ -783,7 +779,6 @@
     @include screen('mobile') {
         .Flex-set{
             .col{ @include flex-col-equal(2, 2px, 20px); }
-            // color: #222;
         }
     }
 }
@@ -832,7 +827,6 @@
     @include screen('mobile') {
         .Flex-set{
             .col{ @include flex-col-equal(2, 2px, 20px); }
-            color: #222;
         }
     }
 }
@@ -893,6 +887,166 @@
     @include screen('mobile') {
         .Flex-set{
             .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+
+// 測試：目前測試 11 欄，流動變化
+[class^="flex-equal-TT"]{
+    &:nth-child(odd){
+        .Flex-set .col{ background: #485b8a; }
+    }
+}
+
+.flex-equal-TT,
+.flex-equal-TT-11, .flex-equal-TT-10, .flex-equal-TT-9, .flex-equal-TT-8, .flex-equal-TT-7,
+.flex-equal-TT-6, .flex-equal-TT-5, .flex-equal-TT-4, .flex-equal-TT-3, .flex-equal-TT-2{
+    .Flex-set{
+        @include gutter(16px);
+        .col{
+            @include flex-col-equal(4, 3px, 20px);
+            // 自定義 ----------------- start
+            background: #00bcd4;
+            color: #fff;
+            margin: 4px 0;
+            // ---------------------- end
+        }
+    }
+}
+.flex-equal-TT{
+    // @include screen('tablet') {
+    //     .Flex-set{
+    //         .col{ @include flex-col-equal(3, 10px, 20px); }
+    //     }
+    // }
+    // @include screen('mobile') {
+    //     .Flex-set{
+    //         .col{ @include flex-col-equal(1, 0px, 20px); }
+    //     }
+    // }
+}
+.flex-equal-TT-11{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(11, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-10{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(10, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-9{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(9, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-8{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(8, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-7{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(7, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-6{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(6, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-5{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(5, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-4{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(4, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-3{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(3, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 2px, 20px); }
+        }
+    }
+    @include screen('xs_mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(1, 2px, 20px); }
+        }
+    }
+}
+.flex-equal-TT-2{
+    @include screen('tablet') {
+        .Flex-set{
+            .col{ @include flex-col-equal(2, 4px, 20px); }
+        }
+    }
+    @include screen('mobile') {
+        .Flex-set{
+            .col{ @include flex-col-equal(1, 2px, 20px); }
         }
     }
 }
