--- a/sass/sass/mixins/_flex-set.scss
+++ b/sass/sass/mixins/_flex-set.scss
@@ -14,9 +14,10 @@
     &:last-child{ margin-right: 0 !important; }
   } @else if $col == 2 {
     &:last-child{
-      &:nth-child(2n-1),
-      &:nth-child(4n-3),
-      &:nth-child(5n-3){ margin-right: 0 !important; }
+      // &:nth-child(2n-1),
+      // &:nth-child(4n-3),
+      // &:nth-child(5n-3){ margin-right: 0 !important; }
+      &:nth-child(2n-1){ margin-right: 0 !important; }
     }
   } @else if $col == 3 {
     &:last-child{
