--- a/sass/sass/mixins/_flex-set_origi2.scss
+++ b/sass/sass/mixins/_flex-set_origi2.scss
@@ -12,9 +12,19 @@
   @if $col == 1 {
     &:last-child{ margin-right: 0 !important; }
   } @else if $col == 2 {
-    &:last-child{                     
-      &:nth-child(2n-1),
-      &:nth-child(11n-2){ margin-right: 0 !important; }
+    &:last-child{
+      // &:nth-child(2n-1){ margin-right: 0; }
+
+      // @for $i10 from 1 through 10 {
+      //   &:nth-child(10n-#{$i10}){ margin-right: 0; }
+      // }
+      // @for $i11 from 1 through 11 {
+      //   &:nth-child(11n-#{$i11}){ margin-right: 0; }
+      // }
+      
+      @for $i12 from 1 through 12 {
+        &:nth-child(12n-#{$i12}){ margin-right: 0; }
+      }
     }
   } @else if $col == 3 {
     &:last-child{
@@ -24,14 +34,14 @@
     }
   } @else if $col == 4 {
     &:last-child{
-      // &:nth-child(4n-4){ margin-right: 0; }
+      &:nth-child(4n){ margin-right: 0; }
       &:nth-child(4n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
       &:nth-child(4n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
       &:nth-child(4n-1){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*1 + (#{$m-gutter}*#{$col})*1 / (#{$col} - 1) ); }
     }
   } @else if $col == 5 {
     &:last-child{
-      // &:nth-child(5n-5){ margin-right: 0; }
+      &:nth-child(5n){ margin-right: 0; }
       &:nth-child(5n-4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
       &:nth-child(5n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
       &:nth-child(5n-2){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*2 + (#{$m-gutter}*#{$col})*2 / (#{$col} - 1) ); }
@@ -39,7 +49,7 @@
     }
   } @else if $col == 6 {
     &:last-child{
-      // &:nth-child(6n-6){ margin-right: 0; }
+      &:nth-child(6n){ margin-right: 0; }
       &:nth-child(6n-5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
       &:nth-child(6n-4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
       &:nth-child(6n-3){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*3 + (#{$m-gutter}*#{$col})*3 / (#{$col} - 1) ); }
@@ -49,7 +59,7 @@
     }
   } @else if $col == 7 {
     &:last-child{
-      // &:nth-child(7n-7){ margin-right: 0; }
+      &:nth-child(7n){ margin-right: 0; }
       &:nth-child(7n-6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
       &:nth-child(7n-5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
       &:nth-child(7n-4){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*4 + (#{$m-gutter}*#{$col})*4 / (#{$col} - 1) ); }
@@ -59,7 +69,7 @@
     }
   } @else if $col == 8 {
     &:last-child{
-      // &:nth-child(8n-8){ margin-right: 0; }
+      &:nth-child(8n){ margin-right: 0; }
       &:nth-child(8n-7){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*7 + (#{$m-gutter}*#{$col})*7 / (#{$col} - 1) ); }
       &:nth-child(8n-6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
       &:nth-child(8n-5){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*5 + (#{$m-gutter}*#{$col})*5 / (#{$col} - 1) ); }
@@ -70,7 +80,7 @@
     }
   } @else if $col == 9 {
     &:last-child{
-      // &:nth-child(9n-9){ margin-right: 0; }
+      &:nth-child(9n){ margin-right: 0; }
       &:nth-child(9n-8){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*8 + (#{$m-gutter}*#{$col})*8 / (#{$col} - 1) ); }
       &:nth-child(9n-7){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*7 + (#{$m-gutter}*#{$col})*7 / (#{$col} - 1) ); }
       &:nth-child(9n-6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
@@ -82,7 +92,8 @@
     }
   } @else if $col == 10 {
     &:last-child{
-      // &:nth-child(10n-9){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*9 + (#{$m-gutter}*#{$col})*9 / (#{$col} - 1) ); }
+      &:nth-child(10n){ margin-right: 0; }
+      &:nth-child(10n-9){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*9 + (#{$m-gutter}*#{$col})*9 / (#{$col} - 1) ); }
       &:nth-child(10n-8){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*8 + (#{$m-gutter}*#{$col})*8 / (#{$col} - 1) ); }
       &:nth-child(10n-7){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*7 + (#{$m-gutter}*#{$col})*7 / (#{$col} - 1) ); }
       &:nth-child(10n-6){ margin-right: calc( (100% / #{$col} - #{$m-gutter})*6 + (#{$m-gutter}*#{$col})*6 / (#{$col} - 1) ); }
