btn、svg、頁數上的form、header、disable 修改

--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -19,6 +19,7 @@ $color-gray: #ccc;
 $color-dark: #333333;
 $color-hr: #666; //hr顏色
 $color-word: #222; //一般字的顏色
+$btn-word: #222; //按鈕字的顏色
 // 連結顏色
 $aColor: #21baff;
 $aHover: lighten($aColor, 10);
@@ -30,7 +31,7 @@ $form-btn: #21baff; //表單
 
 // 字型設定
 $font-family: Lato, 'PingFang TC', 'Helvetica Neue', Helvetica, 微軟正黑體,
-  Arial, sans-serif;
+Arial, sans-serif;
 
 $font-size: 1em;
 
