--- a/sass/sass/_language.scss
+++ b/sass/sass/_language.scss
@@ -1,7 +1,7 @@
 .language {
     font-weight: bold;
     font-size: .75em;
-    text-shadow: 1px 1px 2px RGBA(0, 0, 0, .8);
+    // text-shadow: 1px 1px 2px RGBA(0, 0, 0, .8);
     flex:0 0 140px;
     width: 140px;
     padding-top: .2em;
