--- a/sass/sass/_category.scss
+++ b/sass/sass/_category.scss
@@ -11,7 +11,6 @@
         }
     }
     a {
-        @include gradient(#FFF, #DDD, vertical);
         border: 1px solid #CCC;
         padding: .4em 1em;
         display: block;
@@ -21,7 +20,7 @@
         &:hover,
         &:focus {
             color: #FFF;
-            @include gradient(darken($primaryColor, 0), darken($primaryColor, 15), vertical);
+            background: darken($primaryColor, 15);
             border: 1px solid darken($primaryColor, 15);
             box-shadow: none;
         }
