--- a/sass/sass/_function_panel.scss
+++ b/sass/sass/_function_panel.scss
@@ -3,8 +3,8 @@
     margin: .2em 0;
     padding: .5em 0 .5em;
     min-height: 35px;
-    border-top: 1px solid #DDD;
-    border-bottom: 1px solid #DDD;
+    // border-top: 1px solid #DDD;
+    // border-bottom: 1px solid #DDD;
     display: flex;
     flex-wrap: wrap;
     justify-content:flex-end;
