--- a/sass/sass/_header.scss
+++ b/sass/sass/_header.scss
@@ -1,12 +1,9 @@
 //header
 .header {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-    background: #fff;
-    box-shadow: 0px 2px 5px RGBA(0, 0, 0, .3);
+    position: relative;
+    z-index: 99;
+    background: #FFF;
+    box-shadow: 0px 2px 5px RGBA(0, 0, 0, 0.3);
     transition: .5s;
     // 虛擬底色 - navigation bg
     // &:before {
@@ -296,3 +293,34 @@
     }
 }
 
+// header fix
+.header.fixed {
+    position: fixed;
+    width: 100%;
+    right: 0;
+    top: 0;
+    box-shadow: rgba(0, 0, 0, .5) 0 0 25px;
+    background: rgba(0, 0, 0, .75);
+    z-index: 999;
+    @include screen('mobile') {
+        background: #FFF;
+    }
+    .menu {
+        >ul {
+            >li {
+                >a {
+                    color: #FFF;
+                }
+            }
+        }
+    }
+    .megamenu {
+        >ul {
+            >li {
+                >a {
+                    color: #FFF;
+                }
+            }
+        }
+    }
+}
