--- a/sass/sass/_fontsize.scss
+++ b/sass/sass/_fontsize.scss
@@ -1,6 +1,6 @@
 .font_size {
     display: flex;
-    flex:0 1 12em;
+    flex:0 1 12.5em;
     padding: .3em;
     span {
         font-size: .875em;
@@ -8,26 +8,22 @@
         padding-top: .3em;
     }
     ul {
-
-     @include li-reset;
-     display: flex;
-     flex: 0 0 6em;
-
-     li {
-
+       @include li-reset;
+       display: flex;
+       flex: 0 0 6em;
+       li {
         font-size: 1em;
         flex:0 0 auto;
         margin: 2px;
-
         align-items: center;
         a {
             display: block;
             text-align: center;
-            line-height: 1.8em;
+            line-height: 32px;
             border-radius: 50%;
             background: #F1F1F1;
-            width: 30px;
-            height: 30px;
+            width: 32px;
+            height: 32px;
             color: #333;
             &:hover, &:focus {
                 background: $aHover;
@@ -43,11 +39,9 @@
             }
             &.small {
                 font-size: .938em;
-                line-height:2em;
             }
             &.large {
                 font-size: 1.125em;
-                line-height:1.6em;
             }
         }
     }
