--- a/sass/sass/_function.scss
+++ b/sass/sass/_function.scss
@@ -2,152 +2,135 @@ $function_color:#888;
 //可自訂顏色，或是自帶既有變數，但請注意背景色與字的對比度
 //icon基本設定
 %function_before {
-    vertical-align: middle;
-    content: "";
-    width: 1.2em;
-    height: 1.2em;
-    margin-right: .5em;
-    display: inline-block;
+  vertical-align: middle;
+  content: "";
+  width: 1.2em;
+  height: 1.2em;
+  margin-right: .5em;
+  display: inline-block;
 }
 div.function{
-    box-sizing: border-box;
-    @extend %clearfix;
-    margin: .5em 0;
-    ul {
-        @include li-reset;
-        display: flex;
-        justify-content: flex-end;
-        list-style-type: none;
-        li {
-            margin: 0 0px 0px 3px;
-            flex:0 0 auto;
-            button,
-            a {
-                font-size: .813em;
-                display: block;
-                padding: .2em 1em;
-                background: $function_color;
-                border-color: $function_color;
-                color: #FFF;
-                border-radius: 4px;
-                &:hover,
-                &:focus {
-                    background: darken($aHover, 0);
-                    border-color: darken($aHover, 0);
-                }
-            }
+  box-sizing: border-box;
+  @extend %clearfix;
+  margin: .5em 0;
+  ul {
+    @include li-reset;
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
+    li {
+      margin: 0 0px 0px 3px;
+      flex:0 0 auto;
+      button,
+      a {
+        font-size: .813em;
+        display: block;
+        padding: .2em 1em;
+        background: $function_color;
+        border-color: $function_color;
+        color: #FFF;
+        border-radius: 4px;
+        &:hover,
+        &:focus {
+          background: darken($aHover, 0);
+          border-color: darken($aHover, 0);
+        }
+      }
             // 回上一頁
             &.icon_back {
-                a:before {
-                    @extend %function_before;
-                    background: url(../images/basic/icon_back.svg) no-repeat center center;
-                    background-size: 16px;
+              a:before {
+                @extend %function_before;
+                background: url(../images/basic/icon_back.svg) no-repeat center center;
+                background-size: 16px;
 
-                }
+              }
             }
             // 友善列印
             &.icon_print {
-                a:before {
-                    @extend %function_before;
-                    background: url(../images/basic/icon_print.svg) no-repeat center center;
-                    background-size: 20px;
-                    
-                }
+              a:before {
+                @extend %function_before;
+                background: url(../images/basic/icon_print.svg) no-repeat center center;
+                background-size: 20px;
+
+              }
             }
             // 轉寄友人
             &.icon_forward {
-                a:before {
-                    @extend %function_before;
-                    background: url(../images/basic/icon_forward.svg) no-repeat center bottom;
-                    background-size: 20px;
-                    
-                }
+              a:before {
+                @extend %function_before;
+                background: url(../images/basic/icon_forward.svg) no-repeat center bottom;
+                background-size: 20px;
+
+              }
             }
+          }
         }
-    }
-}
+      }
 // 放進function_panel樣式
 .function_panel {
-    .share {
-        .shareButton {
+  .font_size{
+    padding: 0;
+    flex: initial;
+  }
+  .function {
+    height: 32px;
+    margin: 0;
+    ul {
+      display: flex;
+      li {
+        font-size: 1em;
+        margin: 0 .2em;
+        flex:0 0 32px;
+        a {
+          display: block;
+          box-sizing: border-box;
+          width: 32px;
+          height: 32px;
+          text-align: center;
+          line-height: 32px;
+          border-radius: 50%;
+          background: #F1F1F1;
+          text-indent: -9999px;
+          position: relative;
+          &:hover,
+          &:focus {
+            background: $aHover;
+            color: #FFF;
             &:before {
-                content: "";
-                position: absolute;
-                width: 60%;
-                height: 60%;
-                top: 20%;
-                left: 20%;
-                background: url(../images/basic/icon_share.png) no-repeat center center  !important;
-                background-size: 24px !important;
+              filter: invert(100%);
             }
-            text-indent:-9999px;
-            &:hover,
-            &:focus {
-                &:before {
-                    filter: invert(100%);
-                }
-            }
+          }
+          &:before {
+            content: "";
+            position: absolute;
+            width: 60%;
+            height: 60%;
+            top: 20%;
+            left: 20%;
+          }
         }
-    }
-    .function {
-        height: 40px;
-        margin: 0;
-        ul {
-            display: flex;
-            li {
-                font-size: 1em;
-                margin: 0 .2em;
-                flex:0 0 40px;
-                a {
-                    display: block;
-                    box-sizing: border-box;
-                    width: 40px;
-                    height: 40px;
-                    text-align: center;
-                    line-height: 40px;
-                    border-radius: 50%;
-                    background: #F1F1F1;
-                    text-indent: -9999px;
-                    position: relative;
-                    &:hover,
-                    &:focus {
-                        background: $aHover;
-                        color: #FFF;
-                        &:before {
-                            filter: invert(100%);
-                        }
-                    }
-                    &:before {
-                        content: "";
-                        position: absolute;
-                        width: 60%;
-                        height: 60%;
-                        top: 20%;
-                        left: 20%;
-                    }
-                }
-                &.back {
-                    a:before {
-                        background: url(../images/basic/icon_back.png) no-repeat center center;
-                        background-size: 100%;
-                    }
-                }
-                &.print {
-                    a:before {
-                        background: url(../images/basic/icon_printer.png) no-repeat center center;
-                        background-size: 100%;
-                    }
-                    @include screen('mobile') {
-                        display: none;
-                    }
-                }
-                &.forward {
-                    a:before {
-                        background: url(../images/basic/icon_forward.png) no-repeat center center;
-                        background-size: 100%;
-                    }
-                }
-            }
+        &.back {
+          a:before {
+            background: url(../images/basic/icon_back.png) no-repeat center center;
+            background-size: 100%;
+          }
         }
+        &.print {
+          a:before {
+            background: url(../images/basic/icon_printer.png) no-repeat center center;
+            background-size: 100%;
+          }
+          @include screen('mobile') {
+            display: none;
+          }
+        }
+        &.forward {
+          a:before {
+            background: url(../images/basic/icon_forward.png) no-repeat center center;
+            background-size: 100%;
+          }
+        }
+      }
     }
+  }
 }
