2020-1125 清除舊版本 flex 公式

--- a/sass/sass/_00.scss
+++ b/sass/sass/_00.scss
@@ -52,7 +52,7 @@
 	@include gutter();							// 容器內距 padding
 }
 
-// 5-2 flex 格線系統（ ../sass/mixins/_flex-set.scss）
+// 5-2 flex 格線系統（ ../sass/mixins/_flex-set_for2.scss）
 // flex 父層預設
 // %flex_set{
 //     box-sizing: border-box;
