--- a/sass/sass/mixins/_extend.scss
+++ b/sass/sass/mixins/_extend.scss
@@ -64,3 +64,16 @@
     // 預設均分
     justify-content: space-between;
 }
+
+
+// 繼承
+// @extend %slash;              // 斜線
+// @extend %arrow_setting;      // 箭頭
+// @extend %arrow_down;         // 箭頭：下
+// @extend %arrow_right;        // 箭頭：右
+// @extend %arrow_up;           // 箭頭：上
+// @extend %arrow_left;         // 箭頭：左
+// @extend %clearfix;           // 清除浮動
+// @extend %flex_set;           // 啟動 display:flex
+
+
