--- a/sass/sass/mixins/_gradient.scss
+++ b/sass/sass/mixins/_gradient.scss
@@ -1,22 +1,27 @@
 //http://w3bits.com/sass-mixins/
 @mixin gradient($start-color, $end-color, $orientation) {
-  background: $start-color;
-  @if $orientation == 'vertical' {
-    background: -webkit-linear-gradient(top, $start-color, $end-color);
-    background: linear-gradient(to bottom, $start-color, $end-color);
-  } @else if $orientation == 'horizontal' {
-    background: -webkit-linear-gradient(left, $start-color, $end-color);
-    background: linear-gradient(to right, $start-color, $end-color);
-  }@else if $orientation == 'diagonal' {
-    background: -webkit-linear-gradient(to bottom right, $start-color, $end-color);
-    background: linear-gradient(to bottom right, $start-color, $end-color);
-  }@else if $orientation == 'circle' {
-    background: -webkit-radial-gradient(center, ellipse cover, $start-color, $end-color);
-    background: radial-gradient(ellipse at center, $start-color, $end-color);
-  }
+    background: $start-color;
+    @if $orientation=='vertical' {
+        background: -webkit-linear-gradient(top, $start-color, $end-color);
+        background: linear-gradient(to bottom, $start-color, $end-color);
+    }
+    @else if $orientation=='horizontal' {
+        background: -webkit-linear-gradient(left, $start-color, $end-color);
+        background: linear-gradient(to right, $start-color, $end-color);
+    }
+    @else if $orientation=='diagonal' {
+        background: -webkit-linear-gradient(to bottom right, $start-color, $end-color);
+        background: linear-gradient(to bottom right, $start-color, $end-color);
+    }
+    @else if $orientation=='circle' {
+        background: -webkit-radial-gradient(center, ellipse cover, $start-color, $end-color);
+        background: radial-gradient(ellipse at center, $start-color, $end-color);
+    }
 }
-
 // 範例：
 // .gradient {
-  // @include gradient(#07c, #06f, vertical);
+// @include gradient(#07c, #06f, vertical);      // 水平
+// @include gradient(#07c, #06f, horizontal);    // 垂直
+// @include gradient(#07c, #06f, diagonal);      // 對角線
+// @include gradient(#07c, #06f, circle);        // 圓形
 // }
