20201222  pagination 分頁加上無障礙修改

--- a/sass/sass/_paginations.scss
+++ b/sass/sass/_paginations.scss
@@ -5,6 +5,9 @@
     text-align: center;
     font-size: .938em;
     @extend %clearfix; // outline: 1px solid red;
+    .form_inline{
+        justify-content: center;
+    }
     span {
         color: $primaryColor;
         margin: 0px .5em;
